--- a/src/main/resources/View.fxml
+++ b/src/main/resources/View.fxml
@@ -2,11 +2,16 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.effect.ColorInput?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="586.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Piano.Controller">
    <children>
+      <Rectangle fx:id="rect" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="400.0" stroke="BLACK" strokeType="INSIDE" width="586.0" />
       <Button fx:id="c" layoutX="14.0" layoutY="131.0" mnemonicParsing="false" prefHeight="255.0" prefWidth="80.0" text="C" textAlignment="CENTER">
          <font>
             <Font name="Arial Bold" size="20.0" />
@@ -63,14 +68,18 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="cs" layoutX="75.0" layoutY="131.0" mnemonicParsing="false" prefHeight="182.0" prefWidth="38.0" text="C#">
+      <Button fx:id="cs" layoutX="75.0" layoutY="131.0" mnemonicParsing="false" prefHeight="182.0" prefWidth="38.0" text="C#" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="12.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
-         </cursor></Button>
-      <Button fx:id="start" layoutX="254.0" layoutY="38.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="START">
+         </cursor>
+         <effect>
+            <ColorInput height="182.0" paint="#212121" width="38.0" />
+         </effect>
+      </Button>
+      <Button fx:id="playNote" layoutX="254.0" layoutY="83.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="PLAY NOTE">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
@@ -78,7 +87,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="playNote" layoutX="254.0" layoutY="83.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="PLAY NOTE">
+      <Button fx:id="start" layoutX="254.0" layoutY="38.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="START">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
@@ -93,6 +102,9 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <effect>
+            <ColorInput height="182.0" paint="#202020" width="38.0" />
+         </effect>
       </Button>
       <Button fx:id="fs" layoutX="314.0" layoutY="131.0" mnemonicParsing="false" prefHeight="182.0" prefWidth="38.0" text="F#">
          <font>
@@ -101,6 +113,9 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <effect>
+            <ColorInput height="182.0" paint="#202020" width="38.0" />
+         </effect>
       </Button>
       <Button fx:id="gs" layoutX="395.0" layoutY="131.0" mnemonicParsing="false" prefHeight="182.0" prefWidth="38.0" text="G#">
          <font>
@@ -109,6 +124,9 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <effect>
+            <ColorInput height="182.0" paint="#202020" width="38.0" />
+         </effect>
       </Button>
       <Button fx:id="as" layoutX="474.0" layoutY="131.0" mnemonicParsing="false" prefHeight="182.0" prefWidth="38.0" text="A#">
          <font>
@@ -117,6 +135,42 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <effect>
+            <ColorInput height="182.0" paint="#202020" width="38.0" />
+         </effect>
       </Button>
+      <Text fx:id="score" fill="#19b590" layoutX="454.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="80.0">
+         <font>
+            <Font name="Britannic Bold" size="24.0" />
+         </font>
+         <effect>
+            <Bloom threshold="0.5" />
+         </effect>
+      </Text>
+      <Text fill="WHITE" layoutX="85.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="C#">
+         <font>
+            <Font name="Arial Bold" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="165.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="D#">
+         <font>
+            <Font name="Arial Bold" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="324.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="F#">
+         <font>
+            <Font name="Arial Bold" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="405.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="G#">
+         <font>
+            <Font name="Arial Bold" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="485.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="A#">
+         <font>
+            <Font name="Arial Bold" size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
